# DrugGPTGPCR

./: .gitignore  class_sequence_collection.ipynb  gpcr_class_sequences_from_json.csv  grpo_druggpt_gpcr_experiment.ipynb  ppo_druggpt_gpcr_experiment.ipynb  pyproject.toml  testing.ipynb
